made vertical scrollbar visible on all pages to fix page shaking issue

--- a/src/main.css
+++ b/src/main.css
@@ -1,23 +1,3 @@
-.home-container {
-  background: url("../content/images/mac.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  display: block;
-  top: 0;
-  left: 0;
-  position: absolute; }
-
-.home {
-  height: 100%;
-  background-color: black;
-  opacity: .25; }
-
-h1 {
-  margin-top: 82px; }
-
 .about h1 {
   font-family: OpenSans-Bold;
   margin: 0; }
@@ -81,19 +61,6 @@ h3 {
   background-size: cover;
   background-position-y: -90px; }
 
-.projects h1 {
-  font-family: OpenSans-Bold;
-  margin: 0; }
-
-.projects .hero {
-  height: 320px;
-  background: url("../content/images/code.jpg");
-  background-size: cover;
-  background-position-y: 729px; }
-
-.projects .hero h1 {
-  line-height: 320px; }
-
 .contacts h1 {
   font-family: OpenSans-Bold;
   margin: 0; }
@@ -105,6 +72,39 @@ h3 {
   background-position-y: 1395px; }
 
 .contacts .hero h1 {
+  line-height: 320px; }
+
+.home-container {
+  background: url("../content/images/mac.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  display: block;
+  top: 0;
+  left: 0;
+  position: absolute; }
+
+.home {
+  height: 100%;
+  background-color: black;
+  opacity: .25; }
+
+h1 {
+  margin-top: 82px; }
+
+.projects h1 {
+  font-family: OpenSans-Bold;
+  margin: 0; }
+
+.projects .hero {
+  height: 320px;
+  background: url("../content/images/code.jpg");
+  background-size: cover;
+  background-position-y: 729px; }
+
+.projects .hero h1 {
   line-height: 320px; }
 
 .resume h1 {
@@ -216,6 +216,9 @@ html, body {
 .footer, .push {
   height: 175px;
   /* .push must be the same height as .footer */ }
+
+html {
+  overflow-y: scroll; }
 
 h1 {
   font-family: OpenSans-Bold; }
